<resources>
    <string name="app_name">豆瓣电影</string>
    <string name="hot_hint">电影 / 电视剧/ 影人</string>
    <string name="hot_hint_search">搜索电影 / 电视剧/ 影人</string>
    <string name="movie">电影</string>
    <string name="douban_grade">豆瓣评分</string>
    <string name="douban_hot">豆瓣热门</string>
    <string name="no_data">找不到数据</string>
    <string name="china">中国大陆 :</string>
    <string name="movie_time">片长 :</string>
    <string name="intro">简介</string>
    <string name="expand_string">more</string>
    <string name="collapsed_string">less</string>
    <string name="cast">影人</string>
    <string name="stills_cast">预告片 /剧照</string>
    <string name="comment">短评</string>
    <string name="all_stills">全部剧照</string>
    <string name="all_reply">全部剧照</string>
    <string name="view_image">查看图片</string>
    <string name="collect">收藏</string>
    <string name="one_intro">个人简介</string>
    <string name="birthday">出生日期:</string>
    <string name="born">出生地:</string>
    <string name="constellation">星座:</string>
    <string name="gender">性别:</string>
    <string name="stills_tv">预告片/片花/拍花絮</string>
    <string name="str_setting">设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear_cache">清楚缓存</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">退出登录</string>
    <string name="city_select">选择城市</string>
    <string name="city_hint">请输入城市名称查询</string>
    <string name="hot_city_name">热门城市</string>
    <string name="gps_city_name">GPS定位城市</string>
    <string name="hot">热映</string>
    <string name="search_movie">找片</string>
    <string name="my">我的</string>
    <string name="girl">妹子</string>
    <string name="reserve">预售</string>
    <string name="wanna_see"> 想看 </string>
    <string name="have_seen"> 看过 </string>
    <string name="five_star">5星</string>
    <string name="please_login">请登录</string>
    <string name="my_tickets">我的电影票</string>

    <string name="welcome_dou_ban">欢迎来到豆瓣</string>
    <string name="phone_number_with_email">手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register_dou_ban">注册豆瓣</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_account_error">用户名和密码不匹配</string>
    <string name="wx_login">微信登录</string>
    <string name="xl_login">微博登录</string>
    <string name="write_reply">写回复</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_up">清除</string>
    <string name="hot_search">热门搜索</string>
    <string name="city">城市</string>
    <string name="search_empty">该词搜索为空</string>
    <string name="setting_wallpaper">设置壁纸</string>
    <string name="save_original">保存原图</string>
    <string name="manager_grids">GridsManager</string>
    <string name="manager_linear">LinearManager</string>
    <string name="manager_staggered">StaggeredManager</string>
    <string name="dialog_multithreading">多线程下载</string>
    <string name="user_name">Wynne</string>
    <string name="tab_number">0部</string>
    <string name="check_all">全选</string>
    <string name="filtrate_tab">标签筛选</string>
    <string name="empty_hint">你还没标记相关内容</string>
    <string name="not_ticket">你还没有购买过电影票</string>
    <string name="ticket_advertising">在线选座,随时购买,无需排队</string>
    <string name="be_on_movie">查看上映电影</string>
    <string name="confirm">确认</string>
    <string name="wanna">想看</string>
    <string name="read">看过</string>
    <string name="representative">代表作品</string>
    <string name="douban_top">Top250</string>
    <string name="douban_weekly">本周口碑榜</string>
    <string name="douban_us">北美票房榜</string>
    <string name="all_ranking">全部排名</string>
    <string name="look_all">查看全部</string>
    <string name="hangzhou">杭州</string>
    <string name="select_tag">选择标签</string>
    <string name="record_read_reason">记录一下想看的理由</string>
    <string name="detail_label">删除标签</string>
    <string name="click_star_grade">点击星星评分</string>
    <string name="share_wx_wb">分享到微信、微博</string>
    <string name="string_wb">微博</string>
    <string name="string_pyq">朋友圈</string>
    <string name="share_friend">把上面的卡片分享给好友</string>
    <string name="syn_save_photo">同事保存到手机</string>
    <string name="anonymity_share">匿名分享</string>
    <string name="qr_down">长按识别二维码 \n 下载豆瓣APP</string>

    <item name="tag_key_data" type="id" />
    <item name="tag_key_position" type="id" />
</resources>
