<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_dou_ban"
        android:textColor="@color/color_green"
        android:textSize="28sp" />

    <EditText
        style="@style/EditTextLineColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/phone_number_with_email"
        android:textColor="@color/colorGray"
        android:textSize="12sp" />


    <EditText
        style="@style/EditTextLineColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:textColor="@color/colorGray"
        android:textSize="12sp" />


    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_solid_green"
        android:minHeight="40dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_dou_ban"
            android:textColor="@color/color_green"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>