<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_transparency"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_grids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager_grids"
            android:textColor="@color/set_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/manager_linear"
            android:textColor="@color/set_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_staggered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/manager_staggered"
            android:textColor="@color/set_text_color"
            android:textSize="20sp" />


    </LinearLayout>
</android.support.v7.widget.CardView>