<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_setting_bg"
        android:minHeight="48dp">


        <TextView
            android:id="@+id/tv_number_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/tab_number"
            android:textColor="@color/color_tab_indicator"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/ll_tab_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gray_check_all"
                android:paddingBottom="3dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:text="@string/check_all"
                android:textColor="@color/color_tab_indicator"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_filtrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/filtrate_tab"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty" />

        <TextView
            android:id="@+id/tv_empty"
            style="@style/EmptyBottomTextView"
            android:text="@string/empty_hint" />
    </LinearLayout>
</LinearLayout>