<?xml version="1.0" encoding="utf-8"?>
<mvp.wyyne.douban.moviedouban.widget.InterceptScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:visibility="invisible">

            <include layout="@layout/head_search_layout" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MovieTitleTextView"
                    android:text="@string/douban_hot" />

                <TextView
                    android:id="@+id/tv_now_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:drawableEnd="@drawable/ic_next"
                    android:padding="5dp"
                    android:textSize="14sp"
                    tools:text="全部99+" />

            </RelativeLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/MovieTitleTextView"
                android:text="@string/douban_weekly" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_weekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/look_all"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MovieTitleTextView"
                    android:text="@string/douban_top" />

                <TextView
                    android:id="@+id/tv_top_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:drawableEnd="@drawable/ic_next"
                    android:padding="5dp"
                    android:text="@string/all_ranking"
                    android:textSize="14sp" />

            </RelativeLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/MovieTitleTextView"
                android:text="@string/douban_us" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/look_all"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avl_loading"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:visibility="visible"
            app:indicatorColor="@color/colorOrange"
            app:indicatorName="PacmanIndicator" />
    </FrameLayout>
</mvp.wyyne.douban.moviedouban.widget.InterceptScrollView>