<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_setting_bg"
    android:orientation="vertical">


    <include
        layout="@layout/default_top_layout"
        android:background="@color/white" />

    <RelativeLayout
        style="@style/SettingLayout"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/setting_clear_cache"
            android:textColor="@color/set_text_color"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_trash"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="1MB"
            android:textColor="@color/colorGray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_setting_bg" />

    </RelativeLayout>


    <RelativeLayout style="@style/SettingLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/setting_feedback"
            android:textColor="@color/set_text_color"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_setting_bg" />
    </RelativeLayout>


    <RelativeLayout style="@style/SettingLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/setting_about"
            android:textColor="@color/set_text_color"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_right" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:text="@string/setting_logout"
        android:textColor="@color/set_text_color"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>