<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
    >



    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_gender"
                android:text="@string/gender"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_constellation"
                android:text="@string/constellation"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_birthday"
                android:text="@string/birthday"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_born"
                android:text="@string/born"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_constellation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_born"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorGray_light"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>
</merge>