<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_group_tag_up"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/select_tag"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />

        <mvp.wyyne.douban.moviedouban.widget.FlowView
            android:id="@+id/fvGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:flowBackground="@drawable/bg_flow_select"
            app:flowTextColor="@drawable/hot_text_clolor_selected"
            app:flowTextPaddingBottom="5dp"
            app:flowTextPaddingLeft="10dp"
            app:flowTextPaddingRight="10dp"
            app:flowTextPaddingTop="5dp"
            app:flowTextSize="14sp"
            app:lineMargin="10dp"
            app:maxSelect="0"
            app:selectType="SINGLE"
            app:wordMargin="10dp" />


        <EditText
            android:id="@+id/et_reason"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_btn_gray"
            android:cursorVisible="false"
            android:gravity="top"
            android:hint="@string/record_read_reason"
            android:padding="10dp"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/detail_label"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        android:visibility="gone" />
</RelativeLayout>